2010-06-07 yusei
* Remove short title.

2009-09-07 yusuke
* Replace ERP5Report to ERP5Form and ReportBox

2009-08-25 Mohamadou
* Refactor erp_ui_test to reduce "If mobile" statments.

2009-08-20 Mohamadou
* Skip business_template_zuite in mobile ui tests.

2009-04-30 Tatuya
* add a field 'row_css_method' according as the Listbox.

2009-03-24
* add proxy role to Base_clearCache because worklist are cached.

2009-03-19 Mohamadou
* add functional tests for erp5_ooo_import .

2008-10-01 fabien
* redefine Selenium.prototype.doType function in user-extensions.js. This is made to be able to test file upload.
* move all things used by other ui_test in erp5_ui_test_core framework

2008-08-29 yusei
* Replace N_ with translateString.

2008-06-17 rafael
* Access Tab has your own scripts to handle preference.

2008-06-16 jerome
* Stop calling BTZuite_setPreference in test and add a docstring to explain its purpose.

2008-06-16 yusei
* Update listbox_zuite/testRedirect for recent changes of domain tree rendering.

2008-06-13 kazuhiko
* modify tests according to the changes of domain tree rendering.

2008-06-10 nicolas
* test custom Relation Form Dialog

2008-05-14 rafael
* Initial zuite for access tab

2008-05-13 jerome
* Initial zuite for matrixbox

2008-02-22 jerome
* Add Zuite_setBaseUrl script which will be called before tests by test runner to set the erp5_ui_test_base_url property, and uses this in templates instead of portal ID.

2008-02-21 kazuhiko
* Add lines_field_zuite.

2007-10-30 yo
* Set pricing_interaction_workflow to Foo Line.

2007-10-09 Fabien
* add setPreferredListboxListModeLineCount(10) to ListBoxZuite_reset to diplay the correct lines number

2007-10-02 Yusei
* Fix planingbox test name.

2007-09-04 Kazuhiko
* use portal_url.getPortalObject().absolute_url() instead of portal_url.getPortalPath() for better virtual host support.

2007-02-13 rafael
* Add planningbox_field_zuite.

2007-02-13 yo
* Add datetime_field_zuite.

2006-12-12 yo