@@ -1,3 +1,6 @@
+2014-06-13 tatuya
+* Add a test for folder workflow with a no dialog transition.
+
 2010-06-07 yusei
 * Remove short title.
 
